namespace GieudexPol.Application.Auth.DTOs
{
    public class AuthResponse
    {
        public string Token { get; set; }
        public string Email { get; set; }
    }
}