using Microsoft.AspNetCore.Identity;

namespace GieudexPol.Infrastructure.Auth
{
    public class ApplicationUser : IdentityUser
    {
        // Możesz dodać dodatkowe właściwości dla użytkownika, jeśli są potrzebne
    }
}